tests/valid/id_type_bug.m
% A regression test for a compiler abort on unifications
% of the form `X = X'.
:- module id_type_bug.

:- interface.

:- pred p(int::in, int::out) is det.

%------------------------------------------------------------------------------%
%------------------------------------------------------------------------------%

:- implementation.

p(A, B) :-
	( q(A, X0), Z = Z ->
		X = X0
	;
		X = 1
	),
    p(X, B).

:- pred q(int::in, int::out) is semidet.

q(1, 5).


%------------------------------------------------------------------------------%
%------------------------------------------------------------------------------%
